This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Server Fixes:

--Fixed AHAPGate to handle names with apostrophes.  Thanks Aaron O.



Version 427   2024-May-31

--Apocalypse jumps everyone back to (0,0).  Part of #1069

--When Apocalypse jumps everyone back to (0,0), it now preserves relative
  positioning amoung clusters of nearby people.  This means people aren't all
  slammed together right on the (0,0) mark, but people who were working
  together pre-apocalypse can easily find each other post.  For example, a
  mother standing near her baby will still be standing near her baby post.
  Part of #1069

--Apocalypse now clears Eve location and several other things.  Fixes #1077

--During soft-shutdown, if all players die of old age, and the only players
  left are ghosts, the ghosts are now force-killed.  Otherwise, remaining
  ghosts could delay server shutdown indefinitely.  Fixes #1030

--Fixed crash when adding an object to liveObjectSet when it references
  non-existent sounds that are bigger than the sound set array size.
  Fixed a similar bug for non-existent sprites, etc.

--Fixed bug in importer where it forgot to fclose after fopen on an imported
  file to peek at the header information.  This prevented the remove call on
  Windows, leaving the file behind in the import_add or import_replace folder
  after it was copied over to the imported folder.  Fixes #1079

--Game no longer crashes on Windows and Linux if it's launched from outside of
  its game folder.



Server Fixes:

--Fixed protocol document to specify zlib and not zip compression for map
  chunks and CM messages.  Fixes #1032

--Fixed server crash if twin clients specify a tutorial number > 0 when
  tutorial is disabled.

--Crontab to delete old log files (foodLog, foodLogDetail, failureLog), since
  they were taking up a lot of disk space over the years.  Now deleting logs
  over 60 days on all servers.
